--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A small package to help upload files to IPFS using the Pinata API.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "tsc",
     "check": "npm run test && npm run format && npm run lint && npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags",
     "test": "jest --config ./test/unit/jest-unit.json"
   },
   "keywords": [
@@ -30,18 +32,18 @@
   "author": "Agustinus Theodorus <agustinustheoo@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.5.5",
     "@types/jest": "^26.0.24",
     "jest": "27.0.6",
     "jest-when": "^3.4.2",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.0.3",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "axios": "^0.26.0",
-    "form-data": "^4.0.0"
+    "@kiltprotocol/sdk-js": "^0.25.3",
+    "form-data": "^4.0.0",
+    "axios": "^0.26.0"
   },
   "directories": {
     "test": "test"
